Fixed rendering issue in WebKit-based browser when there is only one item in the shop.. the item div appears to get truncated to the minimum size possible. This fix applies a minimum table width.

--- a/themes/default/css/flux.css
+++ b/themes/default/css/flux.css
@@ -620,6 +620,10 @@ label:hover {
 	padding: 5px;
 }
 
+.shop-table {
+	width: 100%;
+}
+
 .shop-item {
 	margin: 10px;
 	padding: 10px;
